<resources>
    <string name="app_name">Weather</string>

    <string name="_24_c">24°C</string>
    <string name="_2_PM">2 PM</string>
    <string name="feels_like">Feels like</string>

    <string name="cloudy_day">Overcast Clouds</string>
    <string name="wednesday">Wednesday</string>
    <string name="city">City</string>
    <string name="date_time" translatable="false">28/8 2 PM</string>
    <string name="country">Country</string>
    <string name="_40_26_c">24/26°c</string>
    <string name="pressure">Pressure</string>
    <string name="_0_hpa">0 hpa</string>
    <string name="hpa"> hPa</string>
    <string name="_0_precent">0%</string>
    <string name="humidity">Humidity</string>
    <string name="_0_m_s">0 m/s</string>
    <string name="wind">Wind</string>
    <string name="_0">0 %</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="sunset">Sunset</string>
    <string name="_0_m">0 m</string>
    <string name="sunrise">Sunrise</string>
    <string name="_0_0">0.0</string>
    <string name="cloud">Cloud</string>
    <string name="_0percentage">0%</string>
    <string name="_3_58_am">03:58 AM</string>
    <string name="to">TO</string>
    <string name="add_alert">Add Alert</string>
    <string name="from">FROM</string>
    <string name="alert_noS">Alert</string>
    <string name="notification">Notification</string>
    <string name="save">SAVE</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="gps">GPS</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alert">Alerts</string>
    <string name="settings">Settings</string>
    <string name="address_not_found">Address name not found</string>
    <string name="Latitude">Latitude: </string>
    <string name="Longitude">Longitude: </string>
    <string name="search">Search.... </string>


    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="english">English</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="mile_per_hour">Mile/Hour</string>
    <string name="meter_per_sec">Meter/Second</string>
    <string name="disable">Disable</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="ok">OK</string>
    <string name="date">28 August</string>
    <string name="k"> °k</string>
    <string name="c"> °C</string>
    <string name="f"> °F</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="percentage">%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">Alert Service</string>
    <string name="channel_description">Notification Channel for Alert Service</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="weather_Condition">Weather Condition in</string>
    <string name="Dismiss_Button">Dismiss</string>
    <string name="no_network">Please Connect to a Network</string>
    <string name="undo">UNDO</string>
    <string name="notification_enabled">Notification Enabled</string>
    <string name="notification_disabled">Notification Disabled</string>
    <string name="clicked"> Clicked</string>
    <string name="deleted"> Deleted</string>


</resources>