<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blue_background"
        android:gravity="center"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_day_days"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_icon_days"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/sunny" />

        <TextView
            android:id="@+id/tv_status_days"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cloudy_day"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_degree_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_40_26_c"
            android:textColor="@color/text_color"
            android:textSize="15sp" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>